Fixed colour palette resize alignment

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ header {
     text-align: center;
     margin: 0px auto;
     min-height: 100px;
+    min-width: 150px;
   }
 
   .dark-blue {
